# anthropic-ai-lab

./: .gitignore  README.md  bootstrap_feature.py  claude_quickstart.py  config.py  gapped_sentences.py  gapped_text.py  main.py  pyproject.toml  requirements.txt
create_gapped_sentences/: create_gapped_sentences.py  eval_dataset_v1.json  evaluate_gapped_sentences.py  gapped_sentences.py  main.py  single_req.json  system.txt
create_gapped_sentences/data/: single_req.json
create_gapped_sentences/evaluation_results/: eval_43d0a0e1-7a2e-4e19-84e2-429e5c254de0.json  eval_58cd572a-26a9-4381-b4bc-44a026fd1321.json  eval_76a1f40f-f869-49e4-b29d-f4fcc4a7c3bc.json  evaluation.json  simple_request.json  test.json
create_gapped_sentences/prompts/: evaluation.txt  system.txt  system_v2.txt
create_gapped_sentences/results/: response.json  simple_request.json  starter_dataset.json  test.json
eval_suite/: config.py  eval_helpers.py  helpers.py  run_eval_suite.py
features/gapped_sentences/: README.md  evaluate.py  gapped_sentences.py  generate.py  main.py
features/get_started/: evaluate.py  generate.py  main.py
features/keyword_transformation/: README.md  generate.py  main.py
features/keyword_transformations/: evaluate.py  main.py
gapped_sentences/: main.py
gapped_sentences/data/: eval_dataset_v1.json  starter_dataset.json
gapped_sentences/evaluation_results/: eval_63b7fd4d-bc62-4bc2-83a6-6238d54f4e9a.json  eval_d7e84be1-d01b-46dd-bf01-c05d65e10127.json
gapped_sentences/results/: starter_dataset.json
keyword_transformations/: generate.py  main.py
(+15 files in other folders)
